--- a/SwipeTest/proj.android/AndroidManifest.xml
+++ b/SwipeTest/proj.android/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk android:minSdkVersion="9"/>
     <uses-feature android:glEsVersion="0x00020000" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon">
 
@@ -15,7 +18,7 @@
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-                  android:configChanges="orientation|screenSize|smallestScreenSize">
+                  android:configChanges="orientation">
 
             <!-- Tell NativeActivity the name of our .so -->
             <meta-data android:name="android.app.lib_name"
@@ -35,4 +38,4 @@
                       android:xlargeScreens="true"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
-</manifest> 
+</manifest>
